--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
         "target": "es2021",
         /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-        "lib": ["es2021"],
+        "lib": ["es2021", "dom"],
         /* Specify what JSX code is generated. */
         "jsx": "react-jsx",
         /* Specify what module code is generated. */
@@ -32,5 +32,5 @@
         "types": ["./worker-configuration.d.ts"]
     },
     "exclude": ["test"],
-    "include": ["worker-configuration.d.ts", "src/**/*.ts"]
+    "include": ["src/**/*.ts", "worker-configuration.d.ts"]
 }
